--- a/app/templates/components/video-view.html
+++ b/app/templates/components/video-view.html
@@ -1,9 +1,10 @@
 <!-- Handles query requests -->
-<div class="outer-layer-response" data-ng-controller="video-view-controller">
+<div class="outer-layer-response" data-ng-controller="video-view-controller" data-ng-init="onloadFun()">
     <div id="queried-data" data-ng-if="url.length !== 0 ">
         <br>
         <div data-ng-repeat="urls in url">
             <iframe ng-src = "{{urls}}" class ="video-link"></iframe>
          </div>
+         <div id="audio"></div>
     </div>
 </div>
