--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
     <script src="../dependencies/angular-animate.min.js"></script>
     <script src="../dependencies/jquery.min.js"></script>
     <script src="../scripts/index.js"></script>
+    <script src="../dependencies/speakClient.js"></script>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/main.css">
     <title>Jarvis - The Personal Assistant | Desktop</title>
