--- a/app/templates/components/response-routes.html
+++ b/app/templates/components/response-routes.html
@@ -27,4 +27,8 @@
         <div data-ng-include="'components/meaning-view.html'"></div>
     </div>
 
+    <div data-ng-if="showEmailScope">
+        <div data-ng-include="'components/email-view.html'"></div>
+    </div>
+
 </div>
